# chkhinge26

./: ChangeLog  Makefile.am  chkhinge26.c  configure.ac  input.h
